--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ background-image:url();
 <script language="JavaScript"> message="CLOZR FT CLOZR!!!";function clickIE4(){if (event.button==2){alert(message);return false;}}function clickNS4(e){if (document.layers||document.getElementById&&!document.all){if (e.which==2||e.which==3){alert(message);return false;}}}if (document.layers){document.captureEvents(Event.MOUSEDOWN);document.onmousedown=clickNS4;}else if (document.all&&!document.getElementById){document.onmousedown=clickIE4;}document.oncontextmenu=new Function("alert(message);return false")// --></script>
          &nbsp;     
 <center><img style="width:590px;" src="./&#39;HOLLD3N FT CLOZR&#39;_files/7a2bac88c029842c9e3550488cbb35e5.gif">
-             <center><font face="Jolly Lodger" size="9" style="color:#ffffff;text-shadow:#FF0099 0px 0px 10px"> [ HOLLD3N FT CLOZR] </font></center>
+             <center><font face="Jolly Lodger" size="9" style="color:#ffffff;text-shadow:#FF0099 0px 0px 10px"> [ MR. JESAYA SOHASUHATAN AMBARITA] </font></center>
 
 <center><marquee behavior="scroll" direction="left" scrollamount="130" scrolldelay="40" width="100%">
 
